--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui --api 9527"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +18,20 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "20.3.1",
+    "@vitest/coverage-v8": "0.32.2",
+    "@vitest/ui": "0.32.2",
     "eslint": "8.43.0",
+    "prisma": "4.15.0",
     "tsup": "7.0.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.32.2"
   },
   "dependencies": {
+    "@prisma/client": "4.15.0",
+    "@types/bcryptjs": "2.4.2",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.18.0",
     "zod": "3.21.4"
